@@ -13,9 +13,9 @@ Class2=CSmpackageDlg
 
 ResourceCount=3
 Resource1=IDR_MAINFRAME
-Resource2=IDD_INSTALL
+Resource2=IDD_MANAGER
 Class3=CSMPackageInstallDlg
-Resource3=IDD_MANAGER
+Resource3=IDD_INSTALL
 
 [CLS:CSmpackageApp]
 Type=0
@@ -23,6 +23,8 @@ HeaderFile=smpackage.h
 ImplementationFile=smpackage.cpp
 Filter=N
 LastObject=CSmpackageApp
+BaseClass=CWinApp
+VirtualFilter=AC
 
 [CLS:CSmpackageDlg]
 Type=0
@@ -38,12 +40,13 @@ VirtualFilter=dWC
 [DLG:IDD_MANAGER]
 Type=1
 Class=CSmpackageDlg
-ControlCount=5
+ControlCount=6
 Control1=IDOK,button,1342242817
-Control2=IDC_LIST_SONGS,listbox,1352728835
+Control2=IDC_LIST,listbox,1352728843
 Control3=IDC_BUTTON_PLAY,button,1342242816
-Control4=IDC_BUTTON_EXPORT,button,1476460544
+Control4=IDC_BUTTON_EXPORT_AS_ONE,button,1476460544
 Control5=IDC_STATIC,static,1342177294
+Control6=IDC_BUTTON_EXPORT_AS_INDIVIDUAL,button,1476460544
 
 [DLG:IDD_INSTALL]
 Type=1
