@@ -80,12 +80,15 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "Stepmania Package Manager"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "Close",IDOK,260,215,65,14
-    LISTBOX         IDC_LIST_SONGS,5,45,260,160,LBS_SORT | 
+    DEFPUSHBUTTON   "Close",IDOK,259,215,65,14
+    LISTBOX         IDC_LIST,5,45,247,160,LBS_SORT | LBS_MULTIPLESEL | 
                     LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Play Stepmania",IDC_BUTTON_PLAY,5,215,70,15
-    PUSHBUTTON      "Export",IDC_BUTTON_EXPORT,275,75,50,15,WS_DISABLED
-    CONTROL         135,IDC_STATIC,"Static",SS_BITMAP,0,0,295,30
+    PUSHBUTTON      "Export As One",IDC_BUTTON_EXPORT_AS_ONE,256,75,68,15,
+                    WS_DISABLED
+    CONTROL         135,IDC_STATIC,"Static",SS_BITMAP,0,0,332,38
+    PUSHBUTTON      "Export As Individual",IDC_BUTTON_EXPORT_AS_INDIVIDUAL,
+                    256,108,68,15,WS_DISABLED
 END
 
 IDD_INSTALL DIALOG DISCARDABLE  0, 0, 332, 234
@@ -163,7 +166,7 @@ BEGIN
     IDD_MANAGER, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 325
+        RIGHTMARGIN, 324
         TOPMARGIN, 7
         BOTTOMMARGIN, 227
     END
